syntax = "proto3";

option java_package = "com.authentication.grpc";

service userAuthentication {
  rpc loginProvider(LoginRequest) returns(APIResponse);
  rpc loginCustomer(LoginRequest) returns(APIResponse);
  rpc logout(LogoutRequest) returns(APIResponse);
}

message LoginRequest{
  string username = 1;
  string password = 2;
}

message LogoutRequest{
	string message =1;
}

message APIResponse{
  string responseMessage = 1;
  int32 responseCode = 2;
}

message Empty{
}